syntax = "proto2";

package amp.validator;

message TextprotoInConfig {
  optional string file = 1;
}

message JsonOutConfig {
  optional string file = 1;
  enum Mode {
    JSON_ONLY = 1;
    WITH_CLOSURE = 2;
  }
  optional Mode mode = 2 [default = WITH_CLOSURE];
}
message PbOutConfig {
  optional string file = 1;
}

// Command line options for validator-convert.
message ValidatorConvertConfig {
  optional TextprotoInConfig textproto_in = 1;
  oneof out {
    JsonOutConfig json_out = 2;
    PbOutConfig pb_out = 3;
  }
}
